# GraspGeneration

./: .gitignore  Dockerfile  Experiments.ipynb  README.md  categories.py  gen_conda.yml  job-example.yaml  pod-example.yaml  run.py  run_browse.py  score.py  server_connecting_pod.yaml  setup_grasp_gen_env.sh
grasp_py/: CMakeLists.txt  Experiments.ipynb  make_compile.sh  test.py
grasp_py/src/: PointCloud.cu  PointCloud.h  module.cpp  test.cpp
grasp_src/: CMakeCache.txt  CMakeLists.txt  Makefile  PointCloud.cu  PointCloud.h  cmake_install.cmake  compile.sh  grasp_gen  grasp_gen.cpp  run_scoring.py  smooth_normals.cpp  utils.py
pcloud_src/: data_generation.py  icosphere2.vertices
vis_src/: eval_util.py  evaluator.py  run.py
